Resolve dark mode button issue of .nav class

--- a/Projects/Muddasar/style.css
+++ b/Projects/Muddasar/style.css
@@ -137,11 +137,6 @@ header
 /*     Responsive Design     */
 @media screen and (max-width : 953px)
 {
-    #mode-button
-    {
-        display: block;
-    }
-
     .menu-open
     {
         display: block;
